# botarena

./: .gitignore  CMakeLists.txt  README.md  doxyfile
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/arena/: CMakeLists.txt  model.cpp  model.h
src/engine/core/: CMakeLists.txt  botscheduler.cpp  botscheduler.h  scriptengine.cpp  scriptengine.h  timeline.cpp  timeline.h
src/engine/view/: CMakeLists.txt
src/game/: CMakeLists.txt  bot.js  main.cpp
